# matchify

./: MANIFEST.md  README.md  STYLE_GUIDE.md  docker-compose.yml
docs/superpowers/plans/: 2026-03-29-spotify-login.md
docs/superpowers/specs/: 2026-03-29-login-design.md
matchify-app/: .env  app.json  codegen.ts  package-lock.json  package.json  tailwind.config.js
matchify-app/src/__tests__/components/: action-button.test.tsx  auth-gate.test.tsx  glass-input.test.tsx  playlist-card.test.tsx  track-row.test.tsx  vote-card.test.tsx
matchify-app/src/__tests__/foundation/: glass-surface.test.tsx  (+2 more)
matchify-app/src/app/: _layout.tsx  index.tsx  playlists.tsx  welcome.tsx
matchify-app/src/components/: app-tabs.tsx  app-tabs.web.tsx  auth-gate.tsx  glass-surface.tsx  glass-view.tsx  splash-screen.tsx  themed-text.tsx
matchify-app/src/constants/: theme.ts
matchify-app/src/hooks/: use-glass.ts  use-spotify-login.ts
matchify-app/src/lib/: auth-errors.ts  auth-headers.ts  subscription-status.ts  urql.ts
matchify-app/src/store/: auth-store.ts  auth.ts
matchify-backend/: .env  Cargo.toml  test.rs
matchify-backend/src/: config.rs  crypto.rs  db.rs  error.rs  events.rs  jwt.rs  main.rs
matchify-backend/src/db/: indexes.rs
matchify-backend/src/graphql/: mod.rs  mutation.rs  query.rs  subscription.rs
matchify-backend/src/model/: mod.rs  playlist.rs  recommendation.rs  song.rs  spotify.rs  stats.rs  user.rs  vote.rs
matchify-backend/src/service/: lastfm.rs  mod.rs  playlist.rs  recommendation.rs  song.rs  spotify.rs  stats.rs
scripts/: mongo-init.js
(+43 files in other folders)
