[package]
name = "matchify-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"
axum = { version = "0.8.8", features = ["http2"] }
dotenv = "0.15.0"
jsonwebtoken = "10.3.0"
mongodb = "3.5.2"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net"] }
