[package]
name = "matchify-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
async-graphql = { version = "7", features = ["chrono", "uuid", "bson"] }
async-graphql-axum = "7"
mongodb = "3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "10"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.9"
futures = "0.3"


[dev-dependencies]
mockito = "1.7.2"
